refactor: transplant to NeoForge